SPARKC-505: Add WriteConf support to delete and update query templates
Adds per-row TTL/timestamp handling for delete/update templates, preserves TableWriter and WriteConf compatibility, and covers bind marker edge cases with regression tests.